Update to all levels_2

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -96,7 +96,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1910,Y=1046)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-64P9K2G1
 LastExecutedLaunchName=LAPTOP-64P9K2G1
 LastExecutedPIEPreviewDevice=
@@ -133,10 +133,10 @@ GridEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/Street
-MRUItem1=/Game/Maps/TrashPlace
-MRUItem2=/Game/Maps/Hospital
-MRUItem3=/Game/Maps/School
+MRUItem0=/Game/Maps/TrashPlace
+MRUItem1=/Game/Maps/Hospital
+MRUItem2=/Game/Maps/School
+MRUItem3=/Game/Maps/Street
 MRUItem4=/Game/Maps/Alley
 MRUItem5=/Game/Maps/Park
 MRUItem6=/Game/Maps/Menu
@@ -180,7 +180,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Objects/Heart
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -210,32 +210,32 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Street
+LastLevel=/Game/Maps/TrashPlace
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/3D/Objects/CupCake/uploads_files_1985193_cupcake
-MRUItem1=/Game/StarterContent/Particles/P_Smoke
-MRUItem2=/Game/StarterContent/Particles/Materials/M_smoke_subUV
-MRUItem3=/Game/StarterContent/Particles/P_Steam_Lit
-MRUItem4=/Game/Maps/Street
-MRUItem5=/Game/Blueprints/Street/BP_Car1
-MRUItem6=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
-MRUItem7=/Game/Blueprints/Collectibles/BP_CoffePacket
-MRUItem8=/Game/Maps/TrashPlace
-MRUItem9=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street
-MRUItem10=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School
-MRUItem11=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park
-MRUItem12=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital
-MRUItem13=/Game/Maps/Hospital
-MRUItem14=/Game/Maps/School
-MRUItem15=/Game/Maps/Alley
-MRUItem16=/Game/Maps/Park
-MRUItem17=/Game/Blueprints/Collectibles/BP_DoctorHeartTool
-MRUItem18=/Game/Blueprints/Collectibles/BP_Book
-MRUItem19=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem0=/Game/Maps/TrashPlace
+MRUItem1=/Game/Maps/Hospital
+MRUItem2=/Game/Maps/School
+MRUItem3=/Game/Assets/3D/Objects/Heart/Ruby
+MRUItem4=/Game/Blueprints/Collectibles/BP_TeddyBear
+MRUItem5=/Game/Blueprints/Collectibles/BP_HeartToy
+MRUItem6=/Game/Blueprints/Collectibles/BP_CupCake
+MRUItem7=/Game/Maps/Street
+MRUItem8=/Game/Maps/Alley
+MRUItem9=/Game/Maps/Park
+MRUItem10=/Game/Assets/3D/Objects/CupCake/uploads_files_1985193_cupcake
+MRUItem11=/Game/StarterContent/Particles/P_Smoke
+MRUItem12=/Game/StarterContent/Particles/Materials/M_smoke_subUV
+MRUItem13=/Game/StarterContent/Particles/P_Steam_Lit
+MRUItem14=/Game/Blueprints/Street/BP_Car1
+MRUItem15=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem16=/Game/Blueprints/Collectibles/BP_CoffePacket
+MRUItem17=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street
+MRUItem18=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School
+MRUItem19=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1543,6 +1543,28 @@ MaterialExpressionMultiply.MaterialExpression=True
 MaterialExpressionDepthFade.MaterialExpressionDepthFade=True
 MaterialExpressionDepthFade.MaterialExpression=True
 MaterialExpressionParticleColor.MaterialExpression=True
+BP_Apple_C.TransformCommon=True
+BP_CupCake_C.Tick=True
+BP_CupCake_C.Replication=True
+BP_CupCake_C.Rendering=True
+BP_CupCake_C.Actor=True
+BP_CupCake_C.Collision=True
+BP_CupCake_C.Input=True
+BP_HeartToy_C.Tick=True
+BP_HeartToy_C.Replication=True
+BP_HeartToy_C.Rendering=True
+BP_HeartToy_C.Actor=True
+BP_HeartToy_C.Collision=True
+BP_HeartToy_C.Input=True
+BP_TeddyBear_C.Tick=True
+BP_TeddyBear_C.Replication=True
+BP_TeddyBear_C.Rendering=True
+BP_TeddyBear_C.Actor=True
+BP_TeddyBear_C.Collision=True
+BP_TeddyBear_C.Input=True
+BP_CupCake_C.TransformCommon=True
+BP_TeddyBear_C.TransformCommon=True
+BP_HeartToy_C.TransformCommon=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1681,11 +1703,11 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent=
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent=
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 CapsuleComponent=
@@ -1722,12 +1744,15 @@ ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Collectibles/BP_HeartToy.BP_HeartToy;
+RecentlyPlaced=/Game/Assets/3D/Objects/Sewer_Head.Sewer_Head;
+RecentlyPlaced=/Game/Blueprints/Collectibles/BP_TeddyBear.BP_TeddyBear;
+RecentlyPlaced=/Game/Blueprints/Collectibles/BP_CupCake.BP_CupCake;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Sparks.P_Sparks;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Ambient_Dust.P_Ambient_Dust;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Smoke.P_Smoke;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
-RecentlyPlaced=/Game/Assets/3D/Objects/Sewer_Head.Sewer_Head;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital.BP_CheckToAdvance_Hospital;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School.BP_CheckToAdvance_School;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street.BP_CheckToAdvance_Street;
@@ -1739,9 +1764,6 @@ RecentlyPlaced=/Game/Assets/3D/Objects/SEWER_HATCH_model_1_.SEWER_HATCH_model_1_
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/Assets/3D/TrashPlace/Material_002.Material_002;
 RecentlyPlaced=/Game/Assets/3D/TrashPlace/edited_fbx_Plane_002.edited_fbx_Plane_002;
-RecentlyPlaced=/Game/Assets/3D/TrashPlace/Material_3.Material_3;
-RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1845,10 +1867,14 @@ LastLogListing=FBXImport
 /Game/StarterContent/Particles/P_Smoke.P_Smoke=0
 /Game/Blueprints/Street/BP_Car1.BP_Car1=0
 /Game/Assets/3D/Objects/CupCake/uploads_files_1985193_cupcake.uploads_files_1985193_cupcake=1
+/Game/Assets/3D/Objects/Heart/Ruby.Ruby=0
+/Game/Blueprints/Collectibles/BP_CupCake.BP_CupCake=0
+/Game/Blueprints/Collectibles/BP_HeartToy.BP_HeartToy=0
+/Game/Blueprints/Collectibles/BP_TeddyBear.BP_TeddyBear=0
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1352.800 Y=792.800
+WindowSize=X=1354.400 Y=794.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1869,7 +1895,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Objects/Apple_FBX/Apple.FBX
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Objects/HeartToy/uploads_files_2036667_LP_heart_FBX.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2717,6 +2743,10 @@ ExternalImagePicker.TimeStamp=2022.03.06-03.40.09
 ExternalImagePicker.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2022.03.06-03.40.18
 StaticMeshEditor.LastCompileMethod=Unknown
+Cascade.TimeStamp=2022.03.06-03.40.05
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2022.03.06-03.40.08
+DistCurveEditor.LastCompileMethod=Unknown
 
 [DetailCategoriesAdvanced]
 Texture2D.Compression=True
@@ -3053,6 +3083,7 @@ BP_GameModeRaccoon_C=
 BP_Soda_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_Park_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_Alley_C=
+BP_TeddyBear_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -3075,6 +3106,7 @@ LevelSequenceEditorSettings=True
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
