Final map update and level select changes

--- a/Raccoozle/Config/DefaultEngine.ini
+++ b/Raccoozle/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameModeRaccoon.BP_GameModeRaccoon_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/Blueprints/GameInstanceRaccoon.GameInstanceRaccoon_C
+GameInstanceClass=/Game/Blueprints/BP_GameInstanceRaccoon.BP_GameInstanceRaccoon_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
