--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,10 +134,10 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Maps/TrashPlace
-MRUItem1=/Game/Maps/Hospital
-MRUItem2=/Game/Maps/School
-MRUItem3=/Game/Maps/Street
-MRUItem4=/Game/Maps/Alley
+MRUItem1=/Game/Maps/Street
+MRUItem2=/Game/Maps/Hospital
+MRUItem3=/Game/Maps/Alley
+MRUItem4=/Game/Maps/School
 MRUItem5=/Game/Maps/Park
 MRUItem6=/Game/Maps/Menu
 MRUItem7=/Game/Maps/LevelSelection
@@ -180,7 +180,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Collectibles/ItemHolders
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -214,28 +214,35 @@ LastLevel=/Game/Maps/TrashPlace
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_HeartToySpawn.BP_HeartToySpawn
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_SodaSpawn.BP_SodaSpawn
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_AppleSpawn.BP_AppleSpawn
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_CupCakeSpawn.BP_CupCakeSpawn
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder.BP_SodaHolder
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_TeddyBearSpawn.BP_TeddyBearSpawn
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder.BP_CupCakeHolder
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/TrashPlace
-MRUItem1=/Game/Maps/Hospital
-MRUItem2=/Game/Maps/School
-MRUItem3=/Game/Assets/3D/Objects/Heart/Ruby
-MRUItem4=/Game/Blueprints/Collectibles/BP_TeddyBear
-MRUItem5=/Game/Blueprints/Collectibles/BP_HeartToy
-MRUItem6=/Game/Blueprints/Collectibles/BP_CupCake
+MRUItem0=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
+MRUItem1=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_TeddyBearSpawn
+MRUItem2=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_SodaSpawn
+MRUItem3=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_HeartToySpawn
+MRUItem4=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_CupCakeSpawn
+MRUItem5=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_Apple
+MRUItem6=/Game/Maps/TrashPlace
 MRUItem7=/Game/Maps/Street
-MRUItem8=/Game/Maps/Alley
-MRUItem9=/Game/Maps/Park
-MRUItem10=/Game/Assets/3D/Objects/CupCake/uploads_files_1985193_cupcake
-MRUItem11=/Game/StarterContent/Particles/P_Smoke
-MRUItem12=/Game/StarterContent/Particles/Materials/M_smoke_subUV
-MRUItem13=/Game/StarterContent/Particles/P_Steam_Lit
-MRUItem14=/Game/Blueprints/Street/BP_Car1
-MRUItem15=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
-MRUItem16=/Game/Blueprints/Collectibles/BP_CoffePacket
-MRUItem17=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street
-MRUItem18=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School
-MRUItem19=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park
+MRUItem8=/Game/Blueprints/Street/BP_Car1
+MRUItem9=/Game/Blueprints/Collectibles/BP_Soda
+MRUItem10=/Game/Blueprints/Collectibles/ItemHolders/Soda
+MRUItem11=/Game/Maps/Hospital
+MRUItem12=/Game/Maps/Alley
+MRUItem13=/Game/Maps/School
+MRUItem14=/Game/Maps/Park
+MRUItem15=/Game/Maps/Menu
+MRUItem16=/Game/Blueprints/Level_Select/WB_LevelSelect
+MRUItem17=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem18=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem19=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1565,6 +1572,74 @@ BP_TeddyBear_C.Input=True
 BP_CupCake_C.TransformCommon=True
 BP_TeddyBear_C.TransformCommon=True
 BP_HeartToy_C.TransformCommon=True
+BP_Soda_C.Tick=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+WB_LevelSelect_C.Appearance=True
+WB_LevelSelect_C.Input=True
+WB_LevelSelect_C.Interaction=True
+WB_LevelSelect_C.Performance=True
+WB_LevelSelect_C.Layout=True
+WB_LevelSelect_C.Behavior=True
+WB_LevelSelect_C.Render Transform=True
+WB_LevelSelect_C.Navigation=True
+WB_LevelSelect_C.Designer=True
+WB_LevelSelect_C.Accessibility=True
+WB_LevelSelect_C.Clipping=True
+WB_LevelSelect_C.Localization=True
+Soda_C.Tick=True
+Soda_C.Replication=True
+Soda_C.Rendering=True
+Soda_C.Actor=True
+Soda_C.Collision=True
+Soda_C.Input=True
+Soda_C.TransformCommon=True
+Soda_C.Surface Materials=True
+Soda_C.Geometry=True
+Soda_C.Surface Properties=True
+TrashPlace_C.Tick=True
+TrashPlace_C.Replication=True
+TrashPlace_C.Actor=True
+TrashPlace_C.Input=True
+BP_CupCakeSpawn_C.Tick=True
+BP_CupCakeSpawn_C.Replication=True
+BP_CupCakeSpawn_C.Rendering=True
+BP_CupCakeSpawn_C.Actor=True
+BP_CupCakeSpawn_C.Collision=True
+BP_CupCakeSpawn_C.Input=True
+BP_HeartToySpawn_C.Tick=True
+BP_HeartToySpawn_C.Replication=True
+BP_HeartToySpawn_C.Rendering=True
+BP_HeartToySpawn_C.Actor=True
+BP_HeartToySpawn_C.Collision=True
+BP_HeartToySpawn_C.Input=True
+BP_SodaSpawn_C.Tick=True
+BP_SodaSpawn_C.Replication=True
+BP_SodaSpawn_C.Rendering=True
+BP_SodaSpawn_C.Actor=True
+BP_SodaSpawn_C.Collision=True
+BP_SodaSpawn_C.Input=True
+BP_TeddyBearSpawn_C.Tick=True
+BP_TeddyBearSpawn_C.Replication=True
+BP_TeddyBearSpawn_C.Rendering=True
+BP_TeddyBearSpawn_C.Actor=True
+BP_TeddyBearSpawn_C.Collision=True
+BP_TeddyBearSpawn_C.Input=True
+BP_CupCakeHolder_C.Tick=True
+BP_CupCakeHolder_C.Replication=True
+BP_CupCakeHolder_C.Rendering=True
+BP_CupCakeHolder_C.Actor=True
+BP_CupCakeHolder_C.Collision=True
+BP_CupCakeHolder_C.Input=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1592,7 +1667,7 @@ bNavigateToNativeFunctionsFromCallNodes=True
 Bookmarks=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
-GraphEditorQuickJumps=()
+GraphEditorQuickJumps=((1, (EditedObjectPath=/Game/Blueprints/Collectibles/BP_Soda.BP_Soda:EventGraph,SavedViewOffset=(X=630.601929,Y=-397.516724),SavedZoomAmount=0.500000)))
 SaveOnCompile=SoC_Never
 bJumpToNodeErrors=False
 bAllowExplicitImpureNodeDisabling=False
@@ -1667,8 +1742,8 @@ FrameNumberDisplayFormat=Seconds
 
 [DetailPropertyExpansion]
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1719,8 +1794,8 @@ GeomModifier_Clip="\"Object.Settings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BP_GameModeRaccoon_C=
-GameModeBase=
+BP_GameModeRaccoon_C="\"Object.Items collected\" "
+GameModeBase="\"Object.Items collected\" "
 ParticleSystemComponent="\"Object.Tags.ComponentTags\" "
 FXSystemComponent="\"Object.Tags.ComponentTags\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime.Distribution\" "
@@ -1742,8 +1817,13 @@ ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" "
 ParticleModuleAccelerationDrag="\"Object.Drag.DragCoefficientRaw.Distribution\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Collectibles/ItemHolders/Soda.Soda;/Engine/Transient.ActorFactoryBlueprint_0
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Script/Engine.CameraShakeSourceActor;
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_HeartToy.BP_HeartToy;
 RecentlyPlaced=/Game/Assets/3D/Objects/Sewer_Head.Sewer_Head;
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_TeddyBear.BP_TeddyBear;
@@ -1761,9 +1841,6 @@ RecentlyPlaced=/Game/Assets/3D/Objects/Apple/Apple.Apple;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park.BP_CheckToAdvance_Park;
 RecentlyPlaced=/Game/Assets/3D/Objects/SEWER_HATCH_model_1_.SEWER_HATCH_model_1_;
-RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
-RecentlyPlaced=/Game/Assets/3D/TrashPlace/Material_002.Material_002;
-RecentlyPlaced=/Game/Assets/3D/TrashPlace/edited_fbx_Plane_002.edited_fbx_Plane_002;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1871,10 +1948,11 @@ LastLogListing=FBXImport
 /Game/Blueprints/Collectibles/BP_CupCake.BP_CupCake=0
 /Game/Blueprints/Collectibles/BP_HeartToy.BP_HeartToy=0
 /Game/Blueprints/Collectibles/BP_TeddyBear.BP_TeddyBear=0
+/Game/Maps/TrashPlace.TrashPlace:PersistentLevel.TrashPlace=0
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1354.400 Y=794.400
+WindowSize=X=1356.000 Y=796.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3084,6 +3162,9 @@ BP_Soda_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_Park_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_Alley_C=
 BP_TeddyBear_C=SkeletalMeshActor.Physics.ConstraintsGroup,
+TargetPoint=SkeletalMeshActor.Physics.ConstraintsGroup,
+Soda_C=SkeletalMeshActor.Physics.ConstraintsGroup,
+BillboardComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
