Win screen and pause menu update

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -210,32 +210,32 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Menu
+LastLevel=/Game/Maps/TrashPlace
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
-MRUItem1=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_TeddyBearSpawn
-MRUItem2=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_SodaSpawn
-MRUItem3=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_HeartToySpawn
-MRUItem4=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_CupCakeSpawn
-MRUItem5=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_Apple
-MRUItem6=/Game/Maps/TrashPlace
-MRUItem7=/Game/Maps/Street
-MRUItem8=/Game/Blueprints/Street/BP_Car1
-MRUItem9=/Game/Blueprints/Collectibles/BP_Soda
-MRUItem10=/Game/Blueprints/Collectibles/ItemHolders/Soda
-MRUItem11=/Game/Maps/Hospital
-MRUItem12=/Game/Maps/Alley
-MRUItem13=/Game/Maps/School
-MRUItem14=/Game/Maps/Park
-MRUItem15=/Game/Maps/Menu
-MRUItem16=/Game/Blueprints/Level_Select/WB_LevelSelect
-MRUItem17=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem18=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem19=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem0=/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder
+MRUItem1=/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder
+MRUItem2=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
+MRUItem3=/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder
+MRUItem4=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder
+MRUItem5=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem6=/Game/Blueprints/Pause/WB_PauseScreen
+MRUItem7=/Game/Blueprints/Raccoon
+MRUItem8=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem9=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem10=/Game/Blueprints/WinScreen/BP_WinScreen
+MRUItem11=/Game/Blueprints/WinScreen/WB_WinScreen
+MRUItem12=/Game/Blueprints/Main_Menu/GM_MouseShow
+MRUItem13=/Game/Blueprints/WinScreen/WP_WinScreen
+MRUItem14=/Game/Maps/TrashPlace
+MRUItem15=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_TeddyBearSpawn
+MRUItem16=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_SodaSpawn
+MRUItem17=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_HeartToySpawn
+MRUItem18=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_CupCakeSpawn
+MRUItem19=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_Apple
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1633,6 +1633,50 @@ BP_CupCakeHolder_C.Rendering=True
 BP_CupCakeHolder_C.Actor=True
 BP_CupCakeHolder_C.Collision=True
 BP_CupCakeHolder_C.Input=True
+BP_WinScreen_C.TransformCommon=True
+BP_WinScreen_C.Replication=True
+BP_WinScreen_C.Rendering=True
+BP_WinScreen_C.Collision=True
+BP_WinScreen_C.Input=True
+BP_WinScreen_C.Actor=True
+BP_WinScreen_C.Tick=True
+GM_MouseShow_C.Default=True
+WB_PauseScreen_C.Appearance=True
+WB_PauseScreen_C.Input=True
+WB_PauseScreen_C.Interaction=True
+WB_PauseScreen_C.Performance=True
+WB_PauseScreen_C.Layout=True
+WB_PauseScreen_C.Behavior=True
+WB_PauseScreen_C.Render Transform=True
+WB_PauseScreen_C.Navigation=True
+WB_PauseScreen_C.Designer=True
+WB_PauseScreen_C.Accessibility=True
+WB_PauseScreen_C.Clipping=True
+WB_PauseScreen_C.Localization=True
+BP_AppleHolder_C.Tick=True
+BP_AppleHolder_C.Replication=True
+BP_AppleHolder_C.Rendering=True
+BP_AppleHolder_C.Actor=True
+BP_AppleHolder_C.Collision=True
+BP_AppleHolder_C.Input=True
+BP_HeartToyHolder_C.Tick=True
+BP_HeartToyHolder_C.Replication=True
+BP_HeartToyHolder_C.Rendering=True
+BP_HeartToyHolder_C.Actor=True
+BP_HeartToyHolder_C.Collision=True
+BP_HeartToyHolder_C.Input=True
+BP_SodaHolder_C.Tick=True
+BP_SodaHolder_C.Replication=True
+BP_SodaHolder_C.Rendering=True
+BP_SodaHolder_C.Actor=True
+BP_SodaHolder_C.Collision=True
+BP_SodaHolder_C.Input=True
+BP_TeddyBearHolder_C.Tick=True
+BP_TeddyBearHolder_C.Replication=True
+BP_TeddyBearHolder_C.Rendering=True
+BP_TeddyBearHolder_C.Actor=True
+BP_TeddyBearHolder_C.Collision=True
+BP_TeddyBearHolder_C.Input=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1774,7 +1818,7 @@ MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoin
 ActorComponent=
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
 SceneComponent=
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
@@ -1787,8 +1831,8 @@ GeomModifier_Clip="\"Object.Settings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BP_GameModeRaccoon_C="\"Object.Items collected\" "
-GameModeBase="\"Object.Items collected\" "
+BP_GameModeRaccoon_C=
+GameModeBase=
 ParticleSystemComponent="\"Object.Tags.ComponentTags\" "
 FXSystemComponent="\"Object.Tags.ComponentTags\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime.Distribution\" "
@@ -1812,6 +1856,7 @@ ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WB_PauseScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Collectibles/ItemHolders/Soda.Soda;/Engine/Transient.ActorFactoryBlueprint_0
@@ -1942,10 +1987,18 @@ LastLogListing=FBXImport
 /Game/Blueprints/Collectibles/BP_HeartToy.BP_HeartToy=0
 /Game/Blueprints/Collectibles/BP_TeddyBear.BP_TeddyBear=0
 /Game/Maps/TrashPlace.TrashPlace:PersistentLevel.TrashPlace=0
+/Game/Blueprints/WinScreen/WB_WinScreen.WB_WinScreen=0
+/Game/Blueprints/WinScreen/BP_WinScreen.BP_WinScreen=0
+/Game/Blueprints/Pause/WB_PauseScreen.WB_PauseScreen=0
+/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder.BP_AppleHolder=0
+/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder.BP_CupCakeHolder=0
+/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder.BP_HeartToyHolder=0
+/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder.BP_SodaHolder=0
+/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder.BP_TeddyBearHolder=0
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1357.600 Y=797.600
+WindowSize=X=1359.200 Y=799.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3138,7 +3191,7 @@ LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 Car1_C=
-K2Node_VariableGet=SkeletalMeshActor.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,
+K2Node_VariableGet=SkeletalMeshActor.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,WorldSettings.GameMode.SelectedGameModeDetails,
 UniformVector=
 InterpToMovementComponent=
 PropertyWrapper=SkeletalMeshActor.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,
@@ -3158,6 +3211,9 @@ BP_TeddyBear_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 TargetPoint=SkeletalMeshActor.Physics.ConstraintsGroup,
 Soda_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 BillboardComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+WB_WinScreen_C=
+PlayerController=
+BP_WinScreen_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
