Some additional changes to the game
Close to final state just need to create a few UI assets

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -180,7 +180,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Collectibles/ItemHolders
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/WinScreen
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -216,21 +216,21 @@ LastLevel=/Game/Maps/TrashPlace
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder
-MRUItem1=/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder
-MRUItem2=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
-MRUItem3=/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder
-MRUItem4=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder
-MRUItem5=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
-MRUItem6=/Game/Blueprints/Pause/WB_PauseScreen
-MRUItem7=/Game/Blueprints/Raccoon
-MRUItem8=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem9=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem10=/Game/Blueprints/WinScreen/BP_WinScreen
-MRUItem11=/Game/Blueprints/WinScreen/WB_WinScreen
-MRUItem12=/Game/Blueprints/Main_Menu/GM_MouseShow
-MRUItem13=/Game/Blueprints/WinScreen/WP_WinScreen
-MRUItem14=/Game/Maps/TrashPlace
+MRUItem0=/Game/Blueprints/WinScreen/WB_WinScreen
+MRUItem1=/Game/Maps/TrashPlace
+MRUItem2=/Game/Blueprints/Raccoon
+MRUItem3=/Game/Blueprints/WinScreen/BP_WinScreen
+MRUItem4=/Game/Blueprints/Pause/WB_PauseScreen
+MRUItem5=/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder
+MRUItem6=/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder
+MRUItem7=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
+MRUItem8=/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder
+MRUItem9=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder
+MRUItem10=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem11=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem12=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem13=/Game/Blueprints/Main_Menu/GM_MouseShow
+MRUItem14=/Game/Blueprints/WinScreen/WP_WinScreen
 MRUItem15=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_TeddyBearSpawn
 MRUItem16=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_SodaSpawn
 MRUItem17=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_HeartToySpawn
@@ -1677,6 +1677,18 @@ BP_TeddyBearHolder_C.Rendering=True
 BP_TeddyBearHolder_C.Actor=True
 BP_TeddyBearHolder_C.Collision=True
 BP_TeddyBearHolder_C.Input=True
+WB_WinScreen_C.Appearance=True
+WB_WinScreen_C.Input=True
+WB_WinScreen_C.Interaction=True
+WB_WinScreen_C.Performance=True
+WB_WinScreen_C.Layout=True
+WB_WinScreen_C.Behavior=True
+WB_WinScreen_C.Render Transform=True
+WB_WinScreen_C.Navigation=True
+WB_WinScreen_C.Designer=True
+WB_WinScreen_C.Accessibility=True
+WB_WinScreen_C.Clipping=True
+WB_WinScreen_C.Localization=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1781,7 +1793,7 @@ FrameNumberDisplayFormat=Seconds
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1857,6 +1869,7 @@ ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateS
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_PauseScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WB_WinScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Collectibles/ItemHolders/Soda.Soda;/Engine/Transient.ActorFactoryBlueprint_0
@@ -1998,7 +2011,7 @@ LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1359.200 Y=799.200
+WindowSize=X=1360.800 Y=800.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
